# Simple-Signer

./: pyproject.toml
simple_signer/: simple_signer.py
