[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_signer"
version = "1.5.5"
authors = [{name = "Georg Sieber"}]
license = {text = "GPL-3.0"}
description = "Sign and certify PDF files on Linux with optional visual stamp using a .p12/.pfx certificate"
keywords = [
    "python3",
    "pdf",
    "sign",
    "certify",
    "certificate",
    "stamp",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "endesive==2.17.1",
    "PyMuPDF",
    # manually install newest revision as long as there is no new release on PyPI (see oscrypto#78)
    "oscrypto @ git+https://github.com/wbond/oscrypto.git@1547f53",
    # pin pillow to <=9.5.0 as long as PyQt5 is used to avoid
    # "cannot import name 'ImageQt' from 'PIL.ImageQt'"
    # needs: libjpeg-dev zlib1g-dev
    "pillow<=9.5.0",
    # Debian package note: since python3-pyqt5 is a build-dependency and --use-system-packages is set,
    # PyQt5 will not be installed in the venv. This is important because only the system-wide PyQt installation
    # enables us to use the system theme and avoids unnessesary duplicate installation of the Qt libs on the system.
    "PyQt5",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/schorschii/Simple-Signer"

[project.gui-scripts]
simple-signer = "simple_signer.simple_signer:main"

[tool.setuptools]
packages = ["simple_signer"]
platforms = ["all"]
include-package-data = false

[tool.setuptools.package-data]
simple_signer = ["lang/*.qm"]
