[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_signer"
version = "1.5.5"
authors = [{name = "Georg Sieber"}]
license = {text = "GPL-3.0"}
description = "Sign and certify PDF files on Linux with optional visual stamp using a .p12/.pfx certificate"
keywords = [
    "python3",
    "pdf",
    "sign",
    "certify",
    "certificate",
    "stamp",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "endesive",
    "PyMuPDF",
    "PyQt6",
    "tomli-w",
    "xdg-base-dirs",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/schorschii/Simple-Signer"

[project.gui-scripts]
simple-signer = "simple_signer.simple_signer:main"

[tool.setuptools]
packages = ["simple_signer"]
platforms = ["all"]
include-package-data = false

[tool.setuptools.package-data]
simple_signer = ["lang/*.qm"]
